--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,7 +9,7 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="0dp"
+        android:layout_width="248dp"
         android:layout_height="46dp"
         android:text="@string/grabar_audio"
         android:textAlignment="center"
@@ -100,7 +99,7 @@
 
     <Button
         android:id="@+id/bAlarma"
-        android:layout_width="0dp"
+        android:layout_width="422dp"
         android:layout_height="119dp"
         android:backgroundTint="#3D7101"
         android:text="@string/balarma"
@@ -113,8 +112,8 @@
 
     <Button
         android:id="@+id/bRec"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="178dp"
+        android:layout_height="163dp"
         android:layout_marginTop="24dp"
         android:background="@drawable/stop_rec"
         android:text="@string/rec_audio"
