--- a/app/src/main/res/layout/activity_oir_notificacion.xml
+++ b/app/src/main/res/layout/activity_oir_notificacion.xml
@@ -9,7 +9,7 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="0dp"
+        android:layout_width="361dp"
         android:layout_height="55dp"
         android:text="@string/txt_reproducir"
         android:textAlignment="center"
@@ -20,34 +20,35 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.06" />
+        app:layout_constraintVertical_bias="0.093" />
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="408dp"
+        android:layout_height="182dp"
         android:background="@drawable/android"
         android:contentDescription="@string/imagen"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline4" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.754" />
 
     <Button
         android:id="@+id/bReproducir"
-        android:layout_width="wrap_content"
-        android:layout_height="174dp"
+        android:layout_width="167dp"
+        android:layout_height="153dp"
         android:layout_marginTop="116dp"
+        android:layout_marginEnd="120dp"
         android:background="@drawable/reproducir"
         android:text="@string/reproducir"
         android:textColor="#235525"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.35" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline4"
